# dotfiles-system

./: .gitignore  README.md  backup.py  bootstrap.sh  config.example.toml  config.toml  daemon.py  dev_watcher.py  dns_info.md  dotfiles.py  pyproject.toml  scripts  shell_hooks.sh  todo.txt
browser/: setup.sh
browser/policy/: brave-policy.json  chromium-policy.json  firefox-policies.json
prompts/: extract text.txt  make notes.txt
repos/: install.txt
scripts/: game-blocker.sh  nemo_image_tools.sh  setup_system_configs.sh
stow/flameshot/.config/flameshot/: flameshot.ini
stow/gtk-3.0/.config/: gtk-3.0
stow/gtk-3.0/.config/gtk-3.0/: bookmarks  settings.ini
stow/gtk-4.0/.config/gtk-4.0/: dank-colors.css
stow/healthwatch/.config/healthwatch/: config.json  state.json
stow/katerc/.config/: katerc
stow/keybind codes.txt/.config/: keybind codes.txt
stow/kitty/.config/kitty/: GruvBox_DarkHard.conf  dank-tabs.conf  dank-theme.conf  kitty.conf
stow/mimeapps.list/.config/: mimeapps.list
stow/nemo/.config/nemo/actions/: actions-tree.json
stow/rofi/.config/: rofi
stow/sway/.config/sway/: config  current_wallpaper
stow/systemd/.config/systemd/user/: brainwatch.service  (+8 more)
stow/taurine/.config/taurine/: taurine-receipt.json
stow/thunar/.config/Thunar/: accels.scm  uca.xml  uca.xml.bak
stow/waybar/.config/: waybar
stow/waybar/.config/waybar/: config.jsonc  style.css
system/: brave_policies.json  chrome_policies.json  dotfiles-backup.service  dotfiles-backup.timer  dotfiles-dev-watcher.service  firefox_policies.json  healthwatch.service  hosts
(+22 files in other folders)
