[project]
name = "dotfiles-sentry"
version = "0.1.0"
description = "Personal Linux system backup and restore manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "inotify-simple>=1.3.5",
    "httpx>=0.24.0",
    "pygithub>=2.1.0",
    "toml>=0.10.2",
]

[project.scripts]
dotfiles = "dotfiles:app"

[tool.hatch.build.targets.wheel]
packages = ["dotfiles.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
